LogoParser.java
// $ANTLR 3.5.2 Logo.g 2017-12-14 20:15:31

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class LogoParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BACK", "CALL", "CLEAR", "COMPOUND", 
		"DIV", "END", "EQ", "FORWARD", "GREATER", "HIDE", "IF", "LEFT", "LESS", 
		"LOCAL", "LST", "MAKE", "MINUS", "MULT", "NEG", "NEQ", "NUM", "PENDOWN", 
		"PENUP", "PLUS", "REPCOUNT", "REPEAT", "RIGHT", "SETH", "SETPCRGB", "SETPENSIZE", 
		"SETPOS", "SHOW", "SIMPLE", "STOP", "TO", "VAR", "WS", "'\"'", "'('", 
		"')'", "'*'", "'+'", "'-'", "'/'", "':'", "'['", "']'"
	};
	public static final int EOF=-1;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int BACK=4;
	public static final int CALL=5;
	public static final int CLEAR=6;
	public static final int COMPOUND=7;
	public static final int DIV=8;
	public static final int END=9;
	public static final int EQ=10;
	public static final int FORWARD=11;
	public static final int GREATER=12;
	public static final int HIDE=13;
	public static final int IF=14;
	public static final int LEFT=15;
	public static final int LESS=16;
	public static final int LOCAL=17;
	public static final int LST=18;
	public static final int MAKE=19;
	public static final int MINUS=20;
	public static final int MULT=21;
	public static final int NEG=22;
	public static final int NEQ=23;
	public static final int NUM=24;
	public static final int PENDOWN=25;
	public static final int PENUP=26;
	public static final int PLUS=27;
	public static final int REPCOUNT=28;
	public static final int REPEAT=29;
	public static final int RIGHT=30;
	public static final int SETH=31;
	public static final int SETPCRGB=32;
	public static final int SETPENSIZE=33;
	public static final int SETPOS=34;
	public static final int SHOW=35;
	public static final int SIMPLE=36;
	public static final int STOP=37;
	public static final int TO=38;
	public static final int VAR=39;
	public static final int WS=40;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public LogoParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public LogoParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[42+1];


	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return LogoParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Logo.g"; }


	public static class prog_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// Logo.g:22:1: prog : stats EOF -> stats ;
	public final LogoParser.prog_return prog() throws RecognitionException {
		LogoParser.prog_return retval = new LogoParser.prog_return();
		retval.start = input.LT(1);
		int prog_StartIndex = input.index();

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope stats1 =null;

		Object EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_stats=new RewriteRuleSubtreeStream(adaptor,"rule stats");

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

			// Logo.g:22:6: ( stats EOF -> stats )
			// Logo.g:23:7: stats EOF
			{
			pushFollow(FOLLOW_stats_in_prog123);
			stats1=stats();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_stats.add(stats1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog125); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: stats
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 23:17: -> stats
			{
				adaptor.addChild(root_0, stream_stats.nextTree());
			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, prog_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "prog"


	public static class stats_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "stats"
	// Logo.g:26:1: stats : ( stat stats -> ^( COMPOUND stat stats ) | stat -> ^( SIMPLE stat ) );
	public final LogoParser.stats_return stats() throws RecognitionException {
		LogoParser.stats_return retval = new LogoParser.stats_return();
		retval.start = input.LT(1);
		int stats_StartIndex = input.index();

		Object root_0 = null;

		ParserRuleReturnScope stat3 =null;
		ParserRuleReturnScope stats4 =null;
		ParserRuleReturnScope stat5 =null;

		RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
		RewriteRuleSubtreeStream stream_stats=new RewriteRuleSubtreeStream(adaptor,"rule stats");

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

			// Logo.g:26:7: ( stat stats -> ^( COMPOUND stat stats ) | stat -> ^( SIMPLE stat ) )
			int alt1=2;
			switch ( input.LA(1) ) {
			case FORWARD:
				{
				int LA1_1 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case RIGHT:
				{
				int LA1_2 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case LEFT:
				{
				int LA1_3 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case BACK:
				{
				int LA1_4 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case PENUP:
				{
				int LA1_5 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case PENDOWN:
				{
				int LA1_6 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case REPEAT:
				{
				int LA1_7 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case MAKE:
				{
				int LA1_8 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case LOCAL:
				{
				int LA1_9 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case CLEAR:
				{
				int LA1_10 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case IF:
				{
				int LA1_11 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case SHOW:
				{
				int LA1_12 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case HIDE:
				{
				int LA1_13 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case SETPCRGB:
				{
				int LA1_14 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case SETPENSIZE:
				{
				int LA1_15 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case SETPOS:
				{
				int LA1_16 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case SETH:
				{
				int LA1_17 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case TO:
				{
				int LA1_18 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case CALL:
				{
				int LA1_19 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case STOP:
				{
				int LA1_20 = input.LA(2);
				if ( (synpred1_Logo()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// Logo.g:27:7: stat stats
					{
					pushFollow(FOLLOW_stat_in_stats148);
					stat3=stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_stat.add(stat3.getTree());
					pushFollow(FOLLOW_stats_in_stats150);
					stats4=stats();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_stats.add(stats4.getTree());
					// AST REWRITE
					// elements: stat, stats
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 27:18: -> ^( COMPOUND stat stats )
					{
						// Logo.g:27:21: ^( COMPOUND stat stats )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMPOUND, "COMPOUND"), root_1);
						adaptor.addChild(root_1, stream_stat.nextTree());
						adaptor.addChild(root_1, stream_stats.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// Logo.g:28:7: stat
					{
					pushFollow(FOLLOW_stat_in_stats168);
					stat5=stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_stat.add(stat5.getTree());
					// AST REWRITE
					// elements: stat
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 28:12: -> ^( SIMPLE stat )
					{
						// Logo.g:28:15: ^( SIMPLE stat )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(SIMPLE, "SIMPLE"), root_1);
						adaptor.addChild(root_1, stream_stat.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, stats_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "stats"


	public static class stat_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "stat"
	// Logo.g:31:1: stat : ( FORWARD expr -> ^( FORWARD expr ) | RIGHT expr -> ^( RIGHT expr ) | LEFT expr -> ^( LEFT expr ) | BACK expr -> ^( BACK expr ) | PENUP -> ^( PENUP ) | PENDOWN -> ^( PENDOWN ) | REPEAT expr '[' stats ']' -> ^( REPEAT expr stats ) | MAKE '\"' VAR expr -> ^( MAKE VAR expr ) | LOCAL '\"' VAR -> ^( LOCAL VAR ) | CLEAR -> ^( CLEAR ) | IF bexpr '[' stats ']' -> ^( IF bexpr stats ) | SHOW | HIDE | SETPCRGB ^ expr expr expr | SETPENSIZE expr -> ^( SETPENSIZE expr ) | SETPOS ^ expr expr | SETH ^ expr | TO VAR params stats END -> ^( TO VAR params stats ) | CALL VAR exprs -> ^( CALL VAR exprs ) | STOP );
	public final LogoParser.stat_return stat() throws RecognitionException {
		LogoParser.stat_return retval = new LogoParser.stat_return();
		retval.start = input.LT(1);
		int stat_StartIndex = input.index();

		Object root_0 = null;

		Token FORWARD6=null;
		Token RIGHT8=null;
		Token LEFT10=null;
		Token BACK12=null;
		Token PENUP14=null;
		Token PENDOWN15=null;
		Token REPEAT16=null;
		Token char_literal18=null;
		Token char_literal20=null;
		Token MAKE21=null;
		Token char_literal22=null;
		Token VAR23=null;
		Token LOCAL25=null;
		Token char_literal26=null;
		Token VAR27=null;
		Token CLEAR28=null;
		Token IF29=null;
		Token char_literal31=null;
		Token char_literal33=null;
		Token SHOW34=null;
		Token HIDE35=null;
		Token SETPCRGB36=null;
		Token SETPENSIZE40=null;
		Token SETPOS42=null;
		Token SETH45=null;
		Token TO47=null;
		Token VAR48=null;
		Token END51=null;
		Token CALL52=null;
		Token VAR53=null;
		Token STOP55=null;
		ParserRuleReturnScope expr7 =null;
		ParserRuleReturnScope expr9 =null;
		ParserRuleReturnScope expr11 =null;
		ParserRuleReturnScope expr13 =null;
		ParserRuleReturnScope expr17 =null;
		ParserRuleReturnScope stats19 =null;
		ParserRuleReturnScope expr24 =null;
		ParserRuleReturnScope bexpr30 =null;
		ParserRuleReturnScope stats32 =null;
		ParserRuleReturnScope expr37 =null;
		ParserRuleReturnScope expr38 =null;
		ParserRuleReturnScope expr39 =null;
		ParserRuleReturnScope expr41 =null;
		ParserRuleReturnScope expr43 =null;
		ParserRuleReturnScope expr44 =null;
		ParserRuleReturnScope expr46 =null;
		ParserRuleReturnScope params49 =null;
		ParserRuleReturnScope stats50 =null;
		ParserRuleReturnScope exprs54 =null;

		Object FORWARD6_tree=null;
		Object RIGHT8_tree=null;
		Object LEFT10_tree=null;
		Object BACK12_tree=null;
		Object PENUP14_tree=null;
		Object PENDOWN15_tree=null;
		Object REPEAT16_tree=null;
		Object char_literal18_tree=null;
		Object char_literal20_tree=null;
		Object MAKE21_tree=null;
		Object char_literal22_tree=null;
		Object VAR23_tree=null;
		Object LOCAL25_tree=null;
		Object char_literal26_tree=null;
		Object VAR27_tree=null;
		Object CLEAR28_tree=null;
		Object IF29_tree=null;
		Object char_literal31_tree=null;
		Object char_literal33_tree=null;
		Object SHOW34_tree=null;
		Object HIDE35_tree=null;
		Object SETPCRGB36_tree=null;
		Object SETPENSIZE40_tree=null;
		Object SETPOS42_tree=null;
		Object SETH45_tree=null;
		Object TO47_tree=null;
		Object VAR48_tree=null;
		Object END51_tree=null;
		Object CALL52_tree=null;
		Object VAR53_tree=null;
		Object STOP55_tree=null;
		RewriteRuleTokenStream stream_CALL=new RewriteRuleTokenStream(adaptor,"token CALL");
		RewriteRuleTokenStream stream_LEFT=new RewriteRuleTokenStream(adaptor,"token LEFT");
		RewriteRuleTokenStream stream_REPEAT=new RewriteRuleTokenStream(adaptor,"token REPEAT");
		RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
		RewriteRuleTokenStream stream_VAR=new RewriteRuleTokenStream(adaptor,"token VAR");
		RewriteRuleTokenStream stream_PENDOWN=new RewriteRuleTokenStream(adaptor,"token PENDOWN");
		RewriteRuleTokenStream stream_FORWARD=new RewriteRuleTokenStream(adaptor,"token FORWARD");
		RewriteRuleTokenStream stream_MAKE=new RewriteRuleTokenStream(adaptor,"token MAKE");
		RewriteRuleTokenStream stream_PENUP=new RewriteRuleTokenStream(adaptor,"token PENUP");
		RewriteRuleTokenStream stream_LOCAL=new RewriteRuleTokenStream(adaptor,"token LOCAL");
		RewriteRuleTokenStream stream_RIGHT=new RewriteRuleTokenStream(adaptor,"token RIGHT");
		RewriteRuleTokenStream stream_BACK=new RewriteRuleTokenStream(adaptor,"token BACK");
		RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
		RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
		RewriteRuleTokenStream stream_TO=new RewriteRuleTokenStream(adaptor,"token TO");
		RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
		RewriteRuleTokenStream stream_IF=new RewriteRuleTokenStream(adaptor,"token IF");
		RewriteRuleTokenStream stream_CLEAR=new RewriteRuleTokenStream(adaptor,"token CLEAR");
		RewriteRuleTokenStream stream_SETPENSIZE=new RewriteRuleTokenStream(adaptor,"token SETPENSIZE");
		RewriteRuleSubtreeStream stream_bexpr=new RewriteRuleSubtreeStream(adaptor,"rule bexpr");
		RewriteRuleSubtreeStream stream_stats=new RewriteRuleSubtreeStream(adaptor,"rule stats");
		RewriteRuleSubtreeStream stream_exprs=new RewriteRuleSubtreeStream(adaptor,"rule exprs");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		RewriteRuleSubtreeStream stream_params=new RewriteRuleSubtreeStream(adaptor,"rule params");

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }

			// Logo.g:31:6: ( FORWARD expr -> ^( FORWARD expr ) | RIGHT expr -> ^( RIGHT expr ) | LEFT expr -> ^( LEFT expr ) | BACK expr -> ^( BACK expr ) | PENUP -> ^( PENUP ) | PENDOWN -> ^( PENDOWN ) | REPEAT expr '[' stats ']' -> ^( REPEAT expr stats ) | MAKE '\"' VAR expr -> ^( MAKE VAR expr ) | LOCAL '\"' VAR -> ^( LOCAL VAR ) | CLEAR -> ^( CLEAR ) | IF bexpr '[' stats ']' -> ^( IF bexpr stats ) | SHOW | HIDE | SETPCRGB ^ expr expr expr | SETPENSIZE expr -> ^( SETPENSIZE expr ) | SETPOS ^ expr expr | SETH ^ expr | TO VAR params stats END -> ^( TO VAR params stats ) | CALL VAR exprs -> ^( CALL VAR exprs ) | STOP )
			int alt2=20;
			switch ( input.LA(1) ) {
			case FORWARD:
				{
				alt2=1;
				}
				break;
			case RIGHT:
				{
				alt2=2;
				}
				break;
			case LEFT:
				{
				alt2=3;
				}
				break;
			case BACK:
				{
				alt2=4;
				}
				break;
			case PENUP:
				{
				alt2=5;
				}
				break;
			case PENDOWN:
				{
				alt2=6;
				}
				break;
			case REPEAT:
				{
				alt2=7;
				}
				break;
			case MAKE:
				{
				alt2=8;
				}
				break;
			case LOCAL:
				{
				alt2=9;
				}
				break;
			case CLEAR:
				{
				alt2=10;
				}
				break;
			case IF:
				{
				alt2=11;
				}
				break;
			case SHOW:
				{
				alt2=12;
				}
				break;
			case HIDE:
				{
				alt2=13;
				}
				break;
			case SETPCRGB:
				{
				alt2=14;
				}
				break;
			case SETPENSIZE:
				{
				alt2=15;
				}
				break;
			case SETPOS:
				{
				alt2=16;
				}
				break;
			case SETH:
				{
				alt2=17;
				}
				break;
			case TO:
				{
				alt2=18;
				}
				break;
			case CALL:
				{
				alt2=19;
				}
				break;
			case STOP:
				{
				alt2=20;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// Logo.g:32:7: FORWARD expr
					{
					FORWARD6=(Token)match(input,FORWARD,FOLLOW_FORWARD_in_stat195); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_FORWARD.add(FORWARD6);

					pushFollow(FOLLOW_expr_in_stat197);
					expr7=expr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_expr.add(expr7.getTree());
					// AST REWRITE
					// elements: FORWARD, expr
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 32:20: -> ^( FORWARD expr )
					{
						// Logo.g:32:23: ^( FORWARD expr )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot(stream_FORWARD.nextNode(), root_1);
						adaptor.addChild(root_1, stream_expr.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// Logo.g:33:7: RIGHT expr
					{
					RIGHT8=(Token)match(input,RIGHT,FOLLOW_RIGHT_in_stat213); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_RIGHT.add(RIGHT8);

					pushFollow(FOLLOW_expr_in_stat215);
					expr9=expr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_expr.add(expr9.getTree());
					// AST REWRITE
					// elements: RIGHT, expr
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 33:18: -> ^( RIGHT expr )
					{
						// Logo.g:33:21: ^( RIGHT expr )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot(stream_RIGHT.nextNode(), root_1);
						adaptor.addChild(root_1, stream_expr.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 3 :
					// Logo.g:34:7: LEFT expr
					{
					LEFT10=(Token)match(input,LEFT,FOLLOW_LEFT_in_stat231); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_LEFT.add(LEFT10);

					pushFollow(FOLLOW_expr_in_stat233);
					expr11=expr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_expr.add(expr11.getTree());
					// AST REWRITE
					// elements: LEFT, expr
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 34:17: -> ^( LEFT expr )
					{
						// Logo.g:34:20: ^( LEFT expr )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot(stream_LEFT.nextNode(), root_1);
						adaptor.addChild(root_1, stream_expr.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 4 :
					// Logo.g:35:7: BACK expr
					{
					BACK12=(Token)match(input,BACK,FOLLOW_BACK_in_stat249); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_BACK.add(BACK12);

					pushFollow(FOLLOW_expr_in_stat251);
					expr13=expr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_expr.add(expr13.getTree());
					// AST REWRITE
					// elements: BACK, expr
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 35:17: -> ^( BACK expr )
					{
						// Logo.g:35:20: ^( BACK expr )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot(stream_BACK.nextNode(), root_1);
						adaptor.addChild(root_1, stream_expr.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 5 :
					// Logo.g:36:7: PENUP
					{
					PENUP14=(Token)match(input,PENUP,FOLLOW_PENUP_in_stat267); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_PENUP.add(PENUP14);

					// AST REWRITE
					// elements: PENUP
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 36:13: -> ^( PENUP )
					{
						// Logo.g:36:16: ^( PENUP )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot(stream_PENUP.nextNode(), root_1);
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 6 :
					// Logo.g:37:7: PENDOWN
					{
					PENDOWN15=(Token)match(input,PENDOWN,FOLLOW_PENDOWN_in_stat281); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_PENDOWN.add(PENDOWN15);

					// AST REWRITE
					// elements: PENDOWN
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 37:15: -> ^( PENDOWN )
					{
						// Logo.g:37:18: ^( PENDOWN )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot(stream_PENDOWN.nextNode(), root_1);
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 7 :
					// Logo.g:38:7: REPEAT expr '[' stats ']'
					{
					REPEAT16=(Token)match(input,REPEAT,FOLLOW_REPEAT_in_stat295); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_REPEAT.add(REPEAT16);
